// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PercentageField Component does nothing when onChange is not defined 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <input
      autocomplete="off"
      class="default"
      data-testid="DATA-TEST-ID"
      inputmode="numeric"
      name="name"
      type="text"
      value="123 %"
    />
  </div>
</div>
`;

exports[`PercentageField Component does nothing when onChange is not defined 2`] = `
<div>
  <div
    class="fieldGroup"
  >
    <input
      autocomplete="off"
      class="default"
      data-testid="DATA-TEST-ID"
      inputmode="numeric"
      name="name"
      type="text"
      value="12 %"
    />
  </div>
</div>
`;

exports[`PercentageField Component handles change 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <input
      autocomplete="off"
      class="default"
      data-testid="DATA-TEST-ID"
      inputmode="numeric"
      name="name"
      type="text"
      value="123 %"
    />
  </div>
</div>
`;

exports[`PercentageField Component handles change 2`] = `
<div>
  <div
    class="fieldGroup"
  >
    <input
      autocomplete="off"
      class="default"
      data-testid="DATA-TEST-ID"
      inputmode="numeric"
      name="name"
      type="text"
      value="12 %"
    />
  </div>
</div>
`;

exports[`PercentageField Component renders properly 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <input
      autocomplete="off"
      class="default"
      inputmode="numeric"
      name="name"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`PercentageField Component renders with values in disabled highligted 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <input
      autocomplete="off"
      class="default disabled"
      disabled=""
      inputmode="numeric"
      name="name"
      type="text"
      value="1,234,567 %"
    />
  </div>
</div>
`;

exports[`PercentageField Component renders with values in readonly 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <span
      autocomplete="off"
      class="default readOnly"
      id="name"
      name="name"
    >
      1,234 %
    </span>
  </div>
</div>
`;

exports[`PercentageField Component renders with values set as string 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <input
      autocomplete="off"
      class="default"
      inputmode="numeric"
      name="name"
      type="text"
      value="123 %"
    />
  </div>
</div>
`;

exports[`PercentageField Component renders with values set as undefined 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <input
      autocomplete="off"
      class="default"
      inputmode="numeric"
      name="name"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`PercentageField Component renders with values with fieldSize and inline 1`] = `
<div>
  <div
    class="fieldGroup size-6 inline"
  >
    <input
      autocomplete="off"
      class="default"
      inputmode="numeric"
      name="name"
      type="text"
      value="123 %"
    />
  </div>
</div>
`;
